# Black_Hole_Simulation

./: .gitignore  CMakeLists.txt  fragment.glsl  glad.c  main.cpp  readme.md  utils.h  vertex.glsl  video_recorder.cpp
glad/: glad.h
